LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.716 $>


[Note: This file does not mention every change made to the NetBSD source tree.
For an exhaustive list, please subscribe to the `source-changes' mailing list,
or see the mailing list archives.  For more information, send a message
containing just the word `help' to `majordomo@NetBSD.org'.]


Changes from NetBSD 4.0 to NetBSD 5.0:
	iwi(4): Use firmload(9) to load firmware images. You no longer need to
		use iwictl(8) to load the firmware. [skrll 20060809]
	acorn32: Remove the old, pre-wscons, console code.  Kernel
		configurations using the old console (kbd, vt, and vidcconsole)
		will need to be updated to use wscons. [bjh21 20060814]
	wpi(4): Driver for Intel PRO/Wireless 3945ABG.  OpenBSD wpi driver
		ported by Jean-Baptiste Campesato. [simonb 20060818]
	acorn32: Correctly detect the display refresh rate being used under
		RISC OS and look for a matching mode in a list of standard
		video modes.  This removes the requirement for compiling
		RISC OS monitor definitions into the kernel. [bjh21 20060820]
	netns: Support for XNS in the kernel and userspace has been
		removed. [matt 20060825]
	netccit: Support for CCITT/X.26 in the kernel and userspace has
		been removed. [matt 20060825]
	mips64: Preliminary support for a MIPS64 toolchain using the N64
		ABI. [matt 20060825]
	postfix: Updated to 2.3.3 [rpaulo 20060827]
	landisk: Initial import of landisk port for SuperH based
		network storage appliances by I-O DATA.  The port was
		done by NONAKA Kimihiro <nonaka@NetBSD.org>.
		[uwe 20060901]
	evbmips: Add timecounter support. [gdamore 20060901]
	todr(9): New machine independent time-of-day chip framework for
		drivers, which provides uniform handling across all ports.
		Not all ports have adopted it yet.  [gdamore 20060902]
	sun2: Add timecounter support. [gdamore 20060903]
	tcp: Add support for Explicit Congestion Notification as defined
		in RFC 3168. Sponsored by Google SoC. [rpaulo 20060905]